Fixed present world dialogue issues and past world spacing issues

--- a/Hopper/css/past.css
+++ b/Hopper/css/past.css
@@ -139,8 +139,8 @@ body.past {
   left: 40%;
 }
 #slot4 {
-  top: 47%;
-  left: 11%;
+  top: 51%;
+  left: 10.5%;
 }
 #slot5 {
   top: 47%;
